[metadata]
name = iron_vt
version = attr: iron_vt.VERSION
description = Iron Vault
author = Kalle M. Aagaard
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    iron_vt
    iron_vt.backend
install_requires =
    cryptography>=37.0.0
    docopt>=0.6.0

python_requires = >=3.6
zip_safe = no
package_dir =
    =src

[options.entry_points]
console_scripts =
    iron_vt = iron_vt.cli:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    pyright>=0.0.12
    black>=22.3.0


[options.package_data]
netcve =
    py.typed

[flake8]
max-line-length = 88